minor: fix inspections violation